Please enter the commit message for your changes. Lines starting  with '' will be ignored, and an empty message aborts the commit.  On branch master  Your branch is up-to-date with 'origin/master'.
 Changes to be committed:
	modified:   .idea/dataSources.local.xml
	modified:   .idea/dataSources.xml
	modified:   .idea/qboard.iml
	modified:   compress.bat
	modified:   public/_compile/sboard/modifyPage.html.php
	modified:   public/_compile/sboard/readPage.html.php
	modified:   public/_template/sboard/readPage.html

--- a/public/_template/sboard/readPage.html
+++ b/public/_template/sboard/readPage.html
@@ -177,9 +177,7 @@
 
 <script>
 
-    var bno = {boardVO.bno
-    }
-    ;
+    var bno = '{boardVO.bno}';
     var replyPage = 1;
 
     function getPage(pageInfo) {
